--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,8 @@ jobs:
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.1
 
-    - name: Add .NET Framework Developer Pack 4.8
-      run: |
-        choco install netfx-4.8-devpack -y
+    - name: Install .NET Framework Developer Pack 4.8
+      run: choco install netfx-4.8-devpack -y
 
     - name: Copy AutoCAD 2025 References
       run: |
