--- a/CAD_AI_PLUGIN.csproj
+++ b/CAD_AI_PLUGIN.csproj
@@ -61,8 +61,14 @@
 		<PlatformTarget>x64</PlatformTarget>
 	</PropertyGroup>
 
+	<!-- Include plugin file in build -->
+	<ItemGroup>
+    	<Compile Include="PLUGIN.cs" />
+	</ItemGroup>
+
 	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 
 </Project>
+
 
 
