--- a/CAD_AI_PLUGIN.csproj
+++ b/CAD_AI_PLUGIN.csproj
@@ -1,44 +1,44 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Configuration Condition="'$(Configuration)' == ''">Release</Configuration>
-    <Platform Condition="'$(Platform)' == ''">x64</Platform>
-
+    <TargetFramework>net48</TargetFramework>
     <OutputType>Library</OutputType>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <PlatformTarget>x64</PlatformTarget>
 
     <RootNamespace>CAD_AI_PLUGIN</RootNamespace>
     <AssemblyName>CAD_AI_PLUGIN</AssemblyName>
 
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
-  <!-- AutoCAD 2025 references -->
+
+  <!-- AutoCAD 2025 local references -->
   <ItemGroup>
     <Reference Include="acmgd">
       <HintPath>AutoCAD_References\acmgd.dll</HintPath>
       <Private>false</Private>
     </Reference>
+
     <Reference Include="acdbmgd">
       <HintPath>AutoCAD_References\acdbmgd.dll</HintPath>
       <Private>false</Private>
     </Reference>
+
     <Reference Include="accoremgd">
       <HintPath>AutoCAD_References\accoremgd.dll</HintPath>
       <Private>false</Private>
     </Reference>
   </ItemGroup>
 
-  <!-- WebView2 (safe) -->
+
+  <!-- WebView2 -->
   <ItemGroup>
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2651.64" />
   </ItemGroup>
 
-  <!-- System references -->
+
+  <!-- System -->
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,31 +46,10 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
 
-  <!-- Output folders -->
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-
-  <!-- Include your plugin code file(s) -->
+  <!-- Include PLUGIN.cs explicitly -->
   <ItemGroup>
     <Compile Include="PLUGIN.cs" />
-    <Compile Include="Class1.cs" />
-    <Compile Include="Class2.cs" />
-    <Compile Include="Class3.cs" />
-    <Compile Include="ChatGPTPalette.cs" />
   </ItemGroup>
 
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-
 </Project>
-
-
-
-
-
