--- a/CAD_AI_PLUGIN.csproj
+++ b/CAD_AI_PLUGIN.csproj
@@ -5,6 +5,9 @@
     <OutputType>Library</OutputType>
     <PlatformTarget>x64</PlatformTarget>
 
+    <!-- FIX: Prevent duplicate .cs compilation -->
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+
     <RootNamespace>CAD_AI_PLUGIN</RootNamespace>
     <AssemblyName>CAD_AI_PLUGIN</AssemblyName>
 
@@ -53,3 +56,4 @@
   </ItemGroup>
 
 </Project>
+
