--- a/CAD_AI_PLUGIN.csproj
+++ b/CAD_AI_PLUGIN.csproj
@@ -1,22 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
     <OutputType>Library</OutputType>
     <PlatformTarget>x64</PlatformTarget>
 
-    <!-- Prevent GitHub from auto-including all .cs files -->
+    <!-- Prevent GitHub from compiling every .cs twice -->
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
 
     <RootNamespace>CAD_AI_PLUGIN</RootNamespace>
     <AssemblyName>CAD_AI_PLUGIN</AssemblyName>
+
+    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
-  <!-- Include ONLY PLUGIN.cs -->
-  <ItemGroup>
-    <Compile Include="PLUGIN.cs" />
-  </ItemGroup>
-
-  <!-- AutoCAD references -->
+  <!-- AutoCAD 2025 LOCAL references (these match your DLL uploads) -->
   <ItemGroup>
     <Reference Include="acmgd">
       <HintPath>AutoCAD_References\acmgd.dll</HintPath>
@@ -34,5 +33,15 @@
     </Reference>
   </ItemGroup>
 
+  <!-- Compile files manually (because default compile items are disabled) -->
+  <ItemGroup>
+    <Compile Include="PLUGIN.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Class2.cs" />
+    <Compile Include="Class3.cs" />
+    <Compile Include="ChatGPTPalette.cs" />
+  </ItemGroup>
+
 </Project>
+
 
