--- a/CAD_AI_PLUGIN.csproj
+++ b/CAD_AI_PLUGIN.csproj
@@ -5,7 +5,7 @@
     <OutputType>Library</OutputType>
     <PlatformTarget>x64</PlatformTarget>
 
-    <!-- Prevent GitHub from compiling every .cs twice -->
+    <!-- Prevent GitHub from compiling all *.cs by default -->
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
 
     <RootNamespace>CAD_AI_PLUGIN</RootNamespace>
@@ -15,7 +15,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
-  <!-- AutoCAD 2025 LOCAL references (these match your DLL uploads) -->
+  <!-- AutoCAD 2025 DLL REFERENCES -->
   <ItemGroup>
     <Reference Include="acmgd">
       <HintPath>AutoCAD_References\acmgd.dll</HintPath>
@@ -33,15 +33,20 @@
     </Reference>
   </ItemGroup>
 
-  <!-- Compile files manually (because default compile items are disabled) -->
+  <!-- GitHub should compile ONLY these files -->
   <ItemGroup>
     <Compile Include="PLUGIN.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Class2.cs" />
     <Compile Include="Class3.cs" />
-    <Compile Include="ChatGPTPalette.cs" />
+  </ItemGroup>
+
+  <!-- DO NOT INCLUDE ChatGPTPalette.cs in GitHub build -->
+  <ItemGroup>
+    <None Include="ChatGPTPalette.cs" />
   </ItemGroup>
 
 </Project>
+
 
 
