--- a/CAD_AI_PLUGIN.csproj
+++ b/CAD_AI_PLUGIN.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
     <OutputType>Library</OutputType>
     <PlatformTarget>x64</PlatformTarget>
 
-    <!-- Prevent GitHub from compiling all *.cs by default -->
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
 
     <RootNamespace>CAD_AI_PLUGIN</RootNamespace>
@@ -33,20 +33,18 @@
     </Reference>
   </ItemGroup>
 
-  <!-- GitHub should compile ONLY these files -->
+  <!-- Files to compile -->
   <ItemGroup>
     <Compile Include="PLUGIN.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Class2.cs" />
     <Compile Include="Class3.cs" />
-  </ItemGroup>
-
-  <!-- DO NOT INCLUDE ChatGPTPalette.cs in GitHub build -->
-  <ItemGroup>
-    <None Include="ChatGPTPalette.cs" />
+    <Compile Include="ChatGPTPalette.cs" />
   </ItemGroup>
 
 </Project>
+
+
 
 
 
