--- a/CAD_AI_PLUGIN.csproj
+++ b/CAD_AI_PLUGIN.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
+    <TargetFramework>net48</TargetFramework>
     <OutputType>Library</OutputType>
     <PlatformTarget>x64</PlatformTarget>
 
+    <!-- Prevent GitHub from auto-compiling UI files -->
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
 
     <RootNamespace>CAD_AI_PLUGIN</RootNamespace>
@@ -33,13 +33,17 @@
     </Reference>
   </ItemGroup>
 
-  <!-- Files to compile -->
+  <!-- ONLY compile these basic files on GitHub -->
   <ItemGroup>
     <Compile Include="PLUGIN.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Class2.cs" />
     <Compile Include="Class3.cs" />
-    <Compile Include="ChatGPTPalette.cs" />
+  </ItemGroup>
+
+  <!-- DO NOT COMPILE the palette (UI code). GitHub cannot build WebView2. -->
+  <ItemGroup>
+    <None Include="ChatGPTPalette.cs" />
   </ItemGroup>
 
 </Project>
