--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # REMOVE .NET 8 — it breaks .NET Framework builds
-    # ❌ DO NOT add setup-dotnet here
+    # HARD BLOCK .NET 8 — REMOVE ALL INSTALLED SDKs
+    - name: Remove ALL .NET SDKs (force .NET Framework only)
+      run: |
+        echo "Removing .NET SDKs..."
+        rmdir /S /Q "C:\Program Files\dotnet" || echo "Nothing to remove"
+        rmdir /S /Q "C:\Program Files (x86)\dotnet" || echo "Nothing to remove"
+        echo "Done."
+
+    # Install ONLY .NET Framework build tools
+    - name: Install .NET Framework Developer Pack 4.8
+      run: choco install netfx-4.8-devpack -y
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.1
-
-    - name: Install .NET Framework Developer Pack 4.8
-      run: choco install netfx-4.8-devpack -y
 
     - name: Copy AutoCAD 2025 References
       run: |
@@ -32,8 +38,8 @@ jobs:
     - name: Restore NuGet packages
       run: nuget restore CAD_AI_PLUGIN.sln
 
-    - name: Build Solution (x64)
-      run: msbuild CAD_AI_PLUGIN.sln /p:Configuration=Release /p:Platform="x64"
+    - name: Build Solution (x64, .NET Framework 4.8)
+      run: msbuild CAD_AI_PLUGIN.sln /p:Configuration=Release /p:Platform="x64" /p:TargetFrameworkVersion=v4.8
 
     - name: Upload Built DLL
       uses: actions/upload-artifact@v4
@@ -42,3 +48,4 @@ jobs:
         path: |
           **/bin/x64/Release/*.dll
           **/bin/Release/*.dll
+
